<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>de.qytera</groupId>
        <artifactId>qtaf</artifactId>
        <version>0.2.3</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>qtaf-core</artifactId>

    <developers>
        <developer>
            <name>Qytera Development</name>
            <email>dev@qytera.de</email>
            <organization>Qytera Software Testing Solutions GmbH</organization>
            <organizationUrl>https://www.qytera.de/</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:qytera-gmbh/qtaf.git</connection>
        <developerConnection>scm:git:ssh://github.com:qytera-gmbh/qtaf.git</developerConnection>
        <url>https://github.com/qytera-gmbh/qtaf/tree/master</url>
    </scm>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!-- Dependency versions -->
        <allureVersion>2.24.0</allureVersion>
        <appiumVersion>8.5.1</appiumVersion>
        <commonsLangVersion>3.12.0</commonsLangVersion>
        <gsonVersion>2.10.1</gsonVersion>
        <guavaVersion>32.1.2-jre</guavaVersion>
        <guiceVersion>7.0.0</guiceVersion>
        <pebbleVersion>3.2.1</pebbleVersion>
        <allureVersion>2.22.0</allureVersion>
        <rxJavaVersion>1.3.8</rxJavaVersion>
        <zip4JVersion>2.11.5</zip4JVersion>
        <log4JVersion>2.20.0</log4JVersion>
        <appiumVersion>8.3.0</appiumVersion>
        <jsonSimpleVersion>1.1.1</jsonSimpleVersion>
        <jsonPathVersion>2.8.0</jsonPathVersion>
        <guavaVersion>31.1-jre</guavaVersion>
        <commonsLangVersion>3.12.0</commonsLangVersion>
        <reflectionsVersion>0.10.2</reflectionsVersion>
        <rxJavaVersion>1.3.8</rxJavaVersion>
        <seleniumJavaVersion>4.10.0</seleniumJavaVersion>
        <slf4jVersion>2.0.7</slf4jVersion>
        <testNGCucumberVersion>7.12.1</testNGCucumberVersion>
        <testNGVersion>7.8.0</testNGVersion>
        <webDriverManagerVersion>5.4.0</webDriverManagerVersion>
        <zip4JVersion>2.11.5</zip4JVersion>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${seleniumJavaVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-http-jdk-client -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-http-jdk-client</artifactId>
            <version>${seleniumJavaVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testNGVersion}</version>
        </dependency>
        <!-- Cucumber -->
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${testNGCucumberVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-testng</artifactId>
            <version>${testNGCucumberVersion}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>selenide</artifactId>
            <version>6.17.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.appium/java-client -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>${appiumVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4JVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4JVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <!-- Gson: Java to Json conversion -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gsonVersion}</version>
            <scope>compile</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
        <!-- Guice dependency injection framework -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>${guiceVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
        <!-- Simple JSON decoder -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${jsonSimpleVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guavaVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
        <!-- JSON Path -->
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>${jsonPathVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <!-- String helper library -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commonsLangVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.reactivex/rxjava -->
        <!-- Reactive X -->
        <dependency>
            <groupId>io.reactivex</groupId>
            <artifactId>rxjava</artifactId>
            <version>${rxJavaVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
        <!-- Reflections library -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>${reflectionsVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
        <!-- Web Driver Manager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webDriverManagerVersion}</version>
            <scope>compile</scope>
        </dependency>
        <!-- Template engine -->
        <!-- https://mvnrepository.com/artifact/io.pebbletemplates/pebble -->
        <dependency>
            <groupId>io.pebbletemplates</groupId>
            <artifactId>pebble</artifactId>
            <version>${pebbleVersion}</version>
        </dependency>
        <!-- ZIP library -->
        <!-- https://mvnrepository.com/artifact/net.lingala.zip4j/zip4j -->
        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>${zip4JVersion}</version>
        </dependency>
        <!-- Allure Model layer -->
        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-model -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-model</artifactId>
            <version>${allureVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4jVersion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.qytera/qtaf-io -->
        <dependency>
            <groupId>de.qytera</groupId>
            <artifactId>qtaf-io</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>